--- a/css/style.css
+++ b/css/style.css
@@ -71,11 +71,14 @@ body {
   left: 50%;
   /* background-color: red; */
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
+  backface-visibility: hidden; /* This is a trick to prevent any strange shakiness because of the animation */
+  margin-bottom: 60px;
 }
 
 .heading-primary-main {
@@ -83,6 +86,12 @@ body {
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 35px;
+
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+  /* animation-delay: 3s; */
+  /* animation-iteration-count: 3; */
 }
 
 .heading-primary-sub {
@@ -90,4 +99,128 @@ body {
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 17.4px;
+
+  /* We can use a shorthand */
+  animation: moveInRight 1s ease-out;
+}
+
+/* TWO TYPES OF ANIMATIONS IN CSS
+  - TRANSITION PROPERTY AND TRIGER WITH EVENTS LIKE HOVER
+  - KEYFRAMES ( for browser optimization it is best to animate just two properties at the time)
+ */
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  80% {
+    transform: translateX(8px);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  80% {
+    transform: translateX(-8px);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInButton {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+/* PSEUDO CLASSES ARE SPECIAL STATES OF A SELECTOR ELEMENT
+  - FOR EXAMPLE LINK, VISITED, HOVER
+
+  AS WE DECLARED THE BUTTON AS AN INLINE-BLOCK IT WILL BE TREATED AS TEXT, AND WE CAN ALIGN IT TO THE CENTER EASYLY:
+  - SETTING THE CONTAINING ELEMENT TO text-align: center (.text-box)
+
+  WE WILL ANIMATE THE BUTTON WITH THE TRANSITION PROPERTY IN THE INITIAL STATE
+  - SPECIFY WICH PROPERTIES WE WILL ANIMATE
+  - SPECIFY THE DURATION
+
+*/
+
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block; /* this way the blocks model works with this element as if it was a normal box with its own padding, width and height */
+  border-radius: 100px;
+  transition: all 0.2s;
+  position: relative;
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); /* X direction offset, Y direction offset, blur, color */
+}
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-white {
+  background-color: #fff;
+  color: #777;
+}
+
+/* PSEUDO ELEMENTS LET US STYLE CERTAIN PARTS OF ELEMENTS
+  - AFTER PSUDO ELEMENT, LETS US STYLE A VIRTUAL ELEMENT RIGHT AFTER THE ELEMENT WE'RE SELECTING
+  - WE ALLWAYS HAVE TO SPECIFY THE CONTENT AND THE DISPLAY PROPERTIES
+ */
+
+.btn::after {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute; /* This absolute position needs to have a refernece: (first element witha relative position that it can find) 
+  We will declare position:relative to the btn:visited itself */
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.btn-white::after {
+  background-color: #fff;
+}
+
+/* We can specify some properties for the affter element when we hover it
+  - remember to animate it we need to add the transition property to the inital state (.btn::after pseudoelement)
+*/
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+/* We can prevent the button from apperaing before the animation starts (Because of the delay)
+  - animation-fill-mode: backwards will set the 0% properties of the animation to the button, before the animation starts 
+*/
+.btn-animated {
+  animation: moveInButton 1s ease-out 0.75s;
+  animation-fill-mode: backwards;
 }
